--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.25
-pandas>=2.0
-plotly>=5.0
-streamlit-component-template>=0.0.5
-markdown-it-py==4.0.0
-mdurl==0.1.2
-rich==14.1.0
-pygments==2.19.2
+streamlit
+pandas
+plotly
+streamlit-component-template
+markdown
+mdurl
+rich
+pygments
